# ai-2567-2

./: README.md  _config.yml  hello.py  pyproject.toml  tokenizer.pkl
T01 - Python Installation/: README.md  hello.ipynb
T02 - Basic Python/S2 - Part 2/: C7 - Pandas.ipynb  pandas.ipynb  purchases.xlsx  test.xlsx
T05 - Time Series/S01 - Time Series Data/: C1 - Data.ipynb  C2 - Exploratory.ipynb
T05 - Time Series/S02 - Forecasting Workflow/: C1 - Forecasting.ipynb  C2 - Evaluation.ipynb  C3 - Rolling Update.ipynb
T05 - Time Series/S03 - Exogeneous/: C1 - Simple.ipynb  C2 - ForecastX.ipynb
T05 - Time Series/S04 - Multivariate/: C1 - Multi.ipynb
T05 - Time Series/S05 - Stats Models/: C1 - Exponential Smoothing.ipynb  C2 - ARIMA.ipynb  C3 - BATS.ipynb  C4 - Prophet.ipynb
T05 - Time Series/S06 - ML Models/: C1 - Auto.ipynb  C2 - Exo.ipynb  C3 - ForcastX.ipynb
T06 - ML Practices/S00 - Temp/: L2.ipynb
T06 - ML Practices/S01 - Data Preprocessing/: C1 - Dealing with missing data.ipynb
T06 - ML Practices/S02 - Tuning - Classification/: C1 - Manual.ipynb  C2 - GridSearchCV.ipynb
T06 - ML Practices/S03 - Tuning - Regression/: C1 - GridSearchCV.ipynb
T06 - ML Practices/S05 - Evaluation Metrices/: C1 - Evaluation Matrices.ipynb  C4 - GridSearchCV.ipynb
T06 - ML Practices/S06 - Imbalance/: C3 - Glass.ipynb
T07 - ANN/S02 - Regression/: C1 - House.ipynb
T07 - ANN/S04 - Parameter Turning/: C2 - Regression.ipynb
T09 - RNN/: T01 - RNN - Univariate.ipynb
T1 - Basic Python/: python_installation.md
T10 - LLM/: T01 - Huggingface.ipynb  text_generation.ipynb  transformer_test.ipynb
T8 - RNN/: T02 - RNN - MNIST.ipynb
(+43 files in other folders)
