[project]
name = "ai-2567-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyterlab>=4.3.2",
    "matplotlib>=3.9.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "ruff>=0.8.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
]
