[project]
name = "ai-2567-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bpemb>=0.3.6",
    "datasets>=3.3.2",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "jupyterlab>=4.3.2",
    "matplotlib>=3.9.3",
    "nltk>=3.9.1",
    "numpy==1.26.3",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "prophet>=1.1.6",
    "ruff>=0.8.2",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "sktime>=0.35.0",
    "statsmodels>=0.14.4",
    "tbats>=1.1.3",
    "tensorflow>=2.18.0",
    "tf-keras>=2.18.0",
    "torch>=2.6.0",
    "transformers>=4.49.0",
]
